# architecture-patterns-with-python

./: .coveragerc  README.md  justfile  pyproject.toml
made/adapters/: orm.py  sqlalchemy_repository.py
made/core/: domain.py  repository.py
made/tests/integration/: conftest.py  test_sqlalchemy_repository.py
made/tests/unit/: test_allocate.py  test_batches.py
