[tool.poetry]
name = "made"
version = "0.1.0"
description = "Code for the book Architecture Patterns with Python"
authors = ["Vinicius Agostini <vinicius.agostini19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
isort = "^5.10.1"
autoflake = "^1.4"
pre-commit = "^2.17.0"
pynvim = "^0.4.3"
jedi = "^0.18.1"
mypy = "^0.931"
flake8 = "^4.0.1"
hypothesis = "^6.37.1"
pytest-cov = "^3.0.0"

[tool.isort]
known_first_party = "made"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
