[tool.poetry]
name = "made"
version = "0.1.0"
description = "Code for the book Architecture Patterns with Python"
authors = ["Vinicius Agostini <vinicius.agostini19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.15"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
pre-commit = "^3.3.2"
pynvim = "^0.4.3"
jedi = "^0.18.2"
mypy = "^1.3.0"
flake8 = "^6.0.0"
hypothesis = "^6.75.3"
pytest-cov = "^4.0.0"

[tool.isort]
known_first_party = "made"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
